# Experiment

./: .gitignore  App.xaml.cs  BodyBasics-WPF.csproj  BodyBasics-WPF.sln  BodyBasics-WPF_inl51kwa_wpftmp.csproj  CSHARP_GUI_CHANGES.md  CoordinateTransformer.cs  DualCameraCalibrationManager.cs  HRI_EXPERIMENT_README.md  KinectManager.cs  KinectSensorWrapper.cs  MainWindow.xaml  MainWindow.xaml.cs  PROJECT_SPEC.md  PredictionManager.cs  README.md  ScenarioInputDialog.xaml  ScenarioInputDialog.xaml.cs  TrajectoryPlot.xaml  TrajectoryPlot.xaml.cs  TrajectoryRecord.cs  TrajectoryRecorder.cs  add_logs.py  check_scalers.py  create_train_test_split.py  experiment_trajectories.csv  fit_true_scalers.py  fix_errors.py  generate_true_scalers.py  hri_experiment_gui.py  kinect_merger.py  merge_trajectories.py  process_trajectories.py  rename_filtered_files.py  rewrite_xaml.py  test_coordinates.py  test_inference_speed.py  test_trajectories.csv  test_worker.py  trajectory_filter.py  (+4 more)
Merged_Trajectories/: Trajectory_20251218_1048.csv
Properties/: Resources.Designer.cs  Settings.Designer.cs
Trajectories/: traj_20251219_154158.csv  traj_20251219_154628.csv  traj_20251219_155115.csv  traj_20251219_161705.csv  traj_20251219_162030.csv  traj_20251219_163935.csv
Trajectories/filtered/: filtered_traj_20251219_154158.csv  filtered_traj_20251219_162030.csv
hrc_ws/install/: local_setup.sh  (+2 more)
hrc_ws/src/kinect_bridge/: package.xml  setup.cfg  setup.py
hrc_ws/src/kinect_bridge/config/: bridge_params.yaml
hrc_ws/src/kinect_bridge/kinect_bridge/: bridge_node.py  mock_kinect_sender.py
(+43 files in other folders)
